feat: improved UI

--- a/styles/_color.scss
+++ b/styles/_color.scss
@@ -19,8 +19,10 @@ $color-background-darker: $primitive-color-grey-darker;
 $color-background-darkest: $primitive-color-grey-darkest;
 
 // border
+$color-border-brightest: $primitive-color-grey-brightest;
 $color-border-brighter: $primitive-color-grey-bright;
 $color-border-bright: $primitive-color-grey;
 $color-border: $primitive-color-grey-dark;
 $color-border-dark: $primitive-color-grey-darker;
 $color-border-darker: $primitive-color-grey-darkest;
+$color-border-darkest: $primitive-color-black;
