feat: color picker

--- a/src/pages/sprite-editor/ui/partials/panel-dock/PanelDock.module.scss
+++ b/src/pages/sprite-editor/ui/partials/panel-dock/PanelDock.module.scss
@@ -8,5 +8,5 @@
   gap: 2px;
   padding: 2px;
   background-color: styles.$color-background-dark;
-  border: 1px solid styles.$color-background-darker;
+  border: 1px solid styles.$color-border-dark;
 }
