--- a/src/tools/ui-components/color-picker/color/ColorPicker.module.scss
+++ b/src/tools/ui-components/color-picker/color/ColorPicker.module.scss
@@ -1,9 +1,9 @@
 @use '/styles';
 
 .colorPicker {
-  padding: 10px;
   display: grid;
   grid-template-columns: 1fr 28px;
-  gap: 10px;
-  height: 120px;
+  gap: 15px;
+  width: 100%;
+  height: 100%;
 }
