--- a/src/ui/partials/modal-viewport/modal/Modal.module.scss
+++ b/src/ui/partials/modal-viewport/modal/Modal.module.scss
@@ -7,14 +7,14 @@
   width: 100%;
   height: 100%;
   background-color: transparent;
-  z-index: 99999999998;
+  z-index: calc(styles.$z-index-max - 1);
 }
 
 .modalContainer {
   min-width: 20px;
   min-height: 20px;
   position: absolute;
-  z-index: 99999999999;
+  z-index: styles.$z-index-max;
   border-radius: 17px;
   background-color: styles.$color-background;
   border: 2px solid styles.$color-border-brighter;
